<resources>
    <string name="app_name">Women Safety App</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="recording_audio_text">Recording audio</string>
    <string name="sos_alert_button_text">SOS Alert</string>
    <string name="latitude_text">Latitude:</string>
    <string name="longitude_text3">Longitude:</string>
    <string name="loading">Loading…</string>
</resources>