<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/sosButton"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/red"
            android:text="@string/sos_alert_button_text" />
    </RelativeLayout>
    <Button
        android:id="@+id/stop_btn"
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:text="STOP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/latitude_text" />

    <TextView
        android:id="@+id/latTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/longitude_text3" />

    <TextView
        android:id="@+id/lonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Countdown"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp" />

</LinearLayout>
