<?xml version="1.0" encoding="utf-8"?><!--XML code for activity_main.xml-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VoiceRecordingActivity">

    <!--Heading Text View-->
    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/audio_recorder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/recording_audio_text"
        android:gravity="center"
        android:src="@drawable/ic_baseline_mic_24" />

    <!--This will display the status of our app when
        we will record some audio and play that audio-->
    <TextView
        android:id="@+id/idTVstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="18sp" />


    <!--Linear Layout for adding textViews
        in horizontal manner-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnRecord"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/start_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_baseline_fiber_manual_record_24" />

            <!--Textview to stop audio recording
                drawableTop will add above mic image-->
            <TextView
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/stop_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_baseline_stop_24" />
        </LinearLayout>
        <!--Textview to play audio that is recorded
            drawableTop will add above mic image-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/play_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_baseline_play_arrow_24" />

            <!--Textview to pause the play of audio recording
                drawableTop will add above mic image-->
            <TextView
                android:id="@+id/btnStopPlay"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/stop_playing"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_baseline_pause_24" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
